# CuraEngineLE_gRPC_Definitions

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  broadcast_slots.proto  buf.yaml  comb.proto  conandata.yml  conanfile.py  cura.proto  infill.proto  layers.proto  mesh.proto  overhang_areas.proto  platform_adhesion.proto  plugin.proto  polygons.md  polygons.proto  postprocess.proto  settings.proto  setup.py  simplify.proto  skin.proto  slice.proto  slot_id.proto  tool_paths.proto  wall_tool_paths.proto
.github/workflows/: conan-package.yml  update-fork.yml
cura/plugins/infill/v1/: infill.proto
cura/plugins/overhang_areas/v1/: overhang_areas.proto
cura/plugins/postprocess/v1/: postprocess.proto
cura/plugins/simplify/v1/: simplify.proto
cura/plugins/slots/broadcast/v0/: broadcast.proto
cura/plugins/slots/comb/v0/: comb.proto
cura/plugins/slots/comb/v1/: comb.proto
cura/plugins/slots/dialect/v0/: generate.proto  modify.proto
cura/plugins/slots/gcode_paths/v0/: modify.proto
cura/plugins/slots/handshake/v0/: handshake.proto
cura/plugins/slots/infill/v0/: generate.proto  infill.proto  modify.proto
cura/plugins/slots/overhang_areas/v0/: overhang_areas.proto
cura/plugins/slots/platform_adhesion/v0/: platform_adhesion.proto
cura/plugins/slots/platform_adhesion/v1/: platform_adhesion.proto
cura/plugins/slots/postprocess/v0/: modify.proto  postprocess.proto
cura/plugins/slots/simplify/v0/: modify.proto  simplify.proto
cura/plugins/slots/skin/v0/: skin.proto
cura/plugins/slots/skin/v1/: skin.proto
cura/plugins/slots/slice/v0/: slice.proto
cura/plugins/slots/slice/v1/: slice.proto
cura/plugins/slots/wall_toolpaths/v0/: wall_toolpaths.proto
cura/plugins/slots/wall_toolpaths/v1/: wall_toolpaths.proto
cura/plugins/v0/: broadcast_slots.proto  cura.proto  gcodepath.proto  handshake.proto  layers.proto  mesh.proto  point2d.proto  point3d.proto  polygons.md  polygons.proto  printfeatures.proto  slot_id.proto  toolpaths.proto
cura/plugins/v1/: broadcast_slots.proto  cura.proto  layers.proto  mesh.proto  polygons.proto  toolpaths.proto
include/: folder.placeholder
rs/: build.rs  lib.rs
rs/examples/: server.rs
