[package]
name = "curaenginele_grpc_definitions"
version = "0.3.0"
authors = ["Casper <casper.lamboo@ultimaker.com>"]
description = "CuraEngineLE gRPC definitions"
repository = "https://github.com/lulzbot3d/CuraEngineLE_grpc_definitions"
readme = "README.md"
license = "MIT"
edition = "2021"
build = "rs/build.rs"


[lib]
name="curaenginele_grpc_definitions"
path = "rs/lib.rs"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9.2"
prost = "0.11.9"

[build-dependencies]
glob = "0.3.1"
tonic-build = "0.9.2"

[dev-dependencies]
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
